# fractalrender

./: .gitignore  EXAMPLES.md  Makefile.am  README.md  Upload.desktop  cade@summit-k2.local  compileopencl.sh.example  configure.ac  example_cindy.color  example_mine.color  example_simple.color  example_sorbet.color  fractalrender  imagethread.py  kernel.cl  kernel_complex.cl  lib.py  makefile  mandelbrot.c  out.flv  readme.md  requirements.txt  run.py  test_opencl.c
custom_m4/: sdl.m4
docs/: README.md  config.js  index.html  installing.md  jquery.populate.pack.js  mandelbrot.js  quickstart.md  viewer.html  viewer.md
examples/: eleph0.fr
include/: fr.hh
m4/: ax_check_cl.m4  ax_lang_compiler_ms.m4  sdl.m4
src/: Anim.cc  BurningShipEngine.cc  EngineMandelbrot.cc  Image.cc  Makefile.am  MandelbrotEngine.cc  alloc_lib.c  alloc_lib.h  fr.hh  fractalrender.c  fractalrender.h  fractalrender_color.c  fractalrender_color.h  fractalrender_common.c  fractalrender_common.h  fractalrender_defs.h  fractalrender_engine_c.c  fractalrender_engine_c.h  fractalrender_engine_complex.c  fractalrender_engine_complex.h  fractalrender_engine_cuda.c  fractalrender_engine_cuda.h  fractalrender_engine_cuda_helper.h  fractalrender_engine_cuda_kernel.cu  fractalrender_engine_mpf.c  fractalrender_engine_mpf.h  fractalrender_engine_opencl.c  fractalrender_engine_opencl.h  fractalrender_interactive_gtk.c  fractalrender_interactive_gtk.h  fractalrender_interactive_sdl.c  fractalrender_interactive_sdl.h  fractalrender_io_bmp.c  fractalrender_io_bmp.h  fractalrender_io_png.c  fractalrender_io_png.h  fractalrender_lib.c  fractalrender_lib.h  fractalrender_log.c  fractalrender_log.h  (+15 more)
src/color_c/: color_c.c  color_c.h
src/engine_c/: color_c.c  color_c.h  engine_c.c  engine_c.h
src/engine_complex/: engine_complex.c  engine_complex.h
src/engine_cuda/: engine_cuda.c  engine_cuda.h  engine_cuda_impl.h  engine_cuda_kernel.cu
src/engine_mpc/: engine_mpc.c  engine_mpc.h
src/engine_mpf/: engine_mpf.c  engine_mpf.h
src/engine_opencl/: engine_opencl.c  engine_opencl.h
src/io_bmp/: .gitignore  io_bmp.c  io_bmp.h
src/io_img/: io_img.c  io_img.h
src/io_png/: .gitignore  io_png.c  io_png.h
src/io_raw/: .gitignore  io_raw.c  io_raw.h
tmp/: .gitignore
utils/: cleanup.sh  compile_static.sh  convert_kernel.py
